- Added method to define action-result type in AgentActionSchema
- Added Main-Container detection via multicast (option detect-main)
- Modified MainReplicationService to support detailed REMOVED_CONTAINER and DEAD_AGENT events notification instead of just RESET meta-event
- Modified ContainerID class to include main/non-main indication

BUG-FIXES:
- Integraed fix by Geoffrey De Smet to properly deal with loggers that are not JADE loggers. 

LEAP:
- Added support for ServiceHelper retrieval and usage in split container execution mode
- Added support for automatically changing the local port of the Main Container in case the specified port (or the default one) is busy (jade_imtp_leap_LEAPIMTPManager_changeportifbusy option).   


ADD-ONS:
- Persistence Add-on
  - Some fix to properly support MySql DB (by Vincenzo Gioviale)
- Misc Add-on
  - Added dump of threads owned by an Agent (its Thread and its threaded behaviours)
  - Added dump of all threads in a container   

- JADE-SHARP 
  - New add-on allowing Microsoft .NET clients (fully compatible with .NET Compact Framework) to connect to a JADE-based multi agent system and to exchange ACLMessages with remote agents


DOCUMENTATION:
- New tutorial on JADE-JESS integration by Henrique Lopes Cardoso (University of Porto)
- Updated tutorial on Content Languages and Ontologies with information about the new CFReflectiveIntrospector

POSSIBLE BACKWARD INCOMPATIBILITIES:
API: NONE

EXPECTED BEHAVIOUR:
- When using Main Container replication, tool-agents now receive detailed REMOVED_CONTAINER and DEAD_AGENT events instead of just the RESET meta-event. 
A fully backward-compatible behaviour can be obtained by setting to true the jade_core_replication_MainReplicationService_snapshotonfailure configuration option




MAJOR CHANGES in JADE 3.4.1 (15th November 2006)  
==========================================================================
GENERAL IMPROVEMENTS:	