@@ -15,6 +15,11 @@ GENERAL IMPROVEMENTS:
 - Added Main-Container detection via multicast (option detect-main)
 - Modified MainReplicationService to support detailed REMOVED_CONTAINER and DEAD_AGENT events notification instead of just RESET meta-event
 - Modified ContainerID class to include main/non-main indication
+- added package scoped method getThread in the class Agent
+- added package scoped methods getSize in jade.core.messaging.OutBox
+- added package scoped methods getThreadPoolStatus and getThreadPool in jade.core.messaging.MessageManager
+- added public methods getQueueSize and getThreadPool in jade.core.messaging.MessagingService
+
 
 BUG-FIXES:
 - Integraed fix by Geoffrey De Smet to properly deal with loggers that are not JADE loggers. 
@@ -30,6 +35,7 @@ ADD-ONS:
 - Misc Add-on
   - Added dump of threads owned by an Agent (its Thread and its threaded behaviours)
   - Added dump of all threads in a container   
+  - Added dump of deliverer threads
 
 - JADE-SHARP 
   - New add-on allowing Microsoft .NET clients (fully compatible with .NET Compact Framework) to connect to a JADE-based multi agent system and to exchange ACLMessages with remote agents
@@ -784,7 +790,6 @@ GENERAL IMPROVEMENTS:
 - jade.proto.FIPAProtocolNames has been deprecated and will be soon removed
 - added possibility to start a Sniffer agent automatically sniffing a set 
   of agents indicated as arguments (by Karl-Heinz Krempels)
-- added package scoped method getThread in the class Agent
 	
 POSSIBLE BACKWARD INCOMPATIBILITIES:
 - default value of SearchConstraints.maxResults is 1 instead of infinite
